--- a/.env
+++ b/.env
@@ -13,12 +13,19 @@ REDIS_PASSWORD=auoKvRpzKwzdAjYKHNvU7kkVOlgqj4Ut
 REDIS_HOST=redis-13786.c259.us-central1-2.gce.redns.redis-cloud.com
 REDIS_PORT=13786
 
-EMAIL_PASS=edrsybyduvthwsbd
+# EMAIL_PASS=edrsybyduvthwsbd
 
-EMAIL_USER=essential23@gmail.com
+# EMAIL_USER=essential23@gmail.com
+
+
+
+EMAIL_PASS=pknseuxqxzkoqdjg
+EMAIL_USER=babatundeademola112@gmail.com
+
 
 SMTP_PORT=465
 
 CLIENT_URL= http://localhost:5173
 
 CORS_ORIGINS=http://localhost:5173,http://localhost:5174
+FRONTEND_URL=http://localhost:5173,http://localhost:5174
