--- a/EventPlanner/app.json
+++ b/EventPlanner/app.json
@@ -23,6 +23,9 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
+      "extra": {
+      "apiBaseUrl": "http://localhost:8000"
+    },
     "plugins": [
       "expo-router",
       [
@@ -40,3 +43,10 @@
     }
   }
 }
+
+
+
+
+
+
+
