--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb+srv://pbllworld:goal12345@powerball.lllsua4.mongodb.net/salesTrackingApp?retryWrites=true&w=majority"
+MONGO_URI="mongodb+srv://pbllworld:goal12345@powerball.lllsua4.mongodb.net/eventPlanningApp?retryWrites=true&w=majority"
 PORT= 8000
 JWT_SECRET=habeebwaliyu
 CLOUDINARY_CLOUD_NAME  = dc0poqt9l
