--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
-    "nodemailer": "^7.0.3"
+    "morgan": "^1.10.0",
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
