--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
+
+
+    "start": "node dist/src/index.js",
     "build": "tsc",
     "dev": "nodemon src/index.ts"
   },
