--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
 
 
-    "start": "node dist/src/index.js",
+    "start": "node dist/index.js",
     "build": "tsc",
     "dev": "nodemon src/index.ts"
   },
