--- a/EventPlanner/.env
+++ b/EventPlanner/.env
@@ -1,2 +1,2 @@
-API_BASE_URL=http://localhost:8000
-# API_BASE_URL=https://salesttrackingapp.onrender.com/
+# API_BASE_URL=http://localhost:8000
+API_BASE_URL=https://salesttrackingapp.onrender.com
